[tool.poetry]
name = "emacs"
version = "0.1.0"
description = ""
authors = ["Steph Samson <hello@stephsamson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
